move routes name to plural
